<resources>
    <string name="app_name">Book Tracker</string>
    <string name="widget_description">Your current book, today\'s pages and quick buttons</string>
    <string name="shortcut_add">Add book</string>
    <string name="shortcut_add_long">Add a new book</string>
    <string name="shortcut_search">Find books</string>
    <string name="shortcut_search_long">Search books and genres</string>
    <string name="shortcut_stats">Stats</string>
    <string name="shortcut_stats_long">Reading stats</string>
    <string name="shortcut_settings">Settings</string>
    <string name="shortcut_settings_long">Book Tracker settings</string>
</resources>
