<?xml version="1.0" encoding="utf-8"?>
<!-- Long-press the app icon for these. -->
<shortcuts xmlns:android="http://schemas.android.com/apk/res/android">
    <shortcut
        android:shortcutId="add"
        android:enabled="true"
        android:icon="@drawable/ic_shortcut_add"
        android:shortcutShortLabel="@string/shortcut_add"
        android:shortcutLongLabel="@string/shortcut_add_long">
        <intent
            android:action="android.intent.action.VIEW"
            android:data="booktracker://open/add"
            android:targetClass="com.booktracker.app.MainActivity"
            android:targetPackage="com.booktracker.app" />
    </shortcut>
    <shortcut
        android:shortcutId="search"
        android:enabled="true"
        android:icon="@drawable/ic_shortcut_search"
        android:shortcutShortLabel="@string/shortcut_search"
        android:shortcutLongLabel="@string/shortcut_search_long">
        <intent
            android:action="android.intent.action.VIEW"
            android:data="booktracker://open/genres"
            android:targetClass="com.booktracker.app.MainActivity"
            android:targetPackage="com.booktracker.app" />
    </shortcut>
    <shortcut
        android:shortcutId="stats"
        android:enabled="true"
        android:icon="@drawable/ic_shortcut_stats"
        android:shortcutShortLabel="@string/shortcut_stats"
        android:shortcutLongLabel="@string/shortcut_stats_long">
        <intent
            android:action="android.intent.action.VIEW"
            android:data="booktracker://open/stats"
            android:targetClass="com.booktracker.app.MainActivity"
            android:targetPackage="com.booktracker.app" />
    </shortcut>
    <shortcut
        android:shortcutId="settings"
        android:enabled="true"
        android:icon="@drawable/ic_shortcut_settings"
        android:shortcutShortLabel="@string/shortcut_settings"
        android:shortcutLongLabel="@string/shortcut_settings_long">
        <intent
            android:action="android.intent.action.VIEW"
            android:data="booktracker://open/settings"
            android:targetClass="com.booktracker.app.MainActivity"
            android:targetPackage="com.booktracker.app" />
    </shortcut>
</shortcuts>
